# termpod

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  clipboard  libpodfmt.pc.in  termpod.pc.in
cmake/: Config.cmake.in  FindTermPOD.cmake
examples/podorgana/: podorgana.cpp
include/termpod/: archive.hpp  checksum.hpp  load.hpp  pod.hpp  tdf.hpp
src/: ccitt32_crc.c  ccitt32_crc.h  epd.c  epd.h  libpodfmt.c  libpodfmt.h  mkdir_p.c  mkdir_p.h  openat2.c  openat2.h  path.c  path.h  pod1.c  pod1.h  pod2.c  pod2.h  pod3.c  pod3.h  pod4.c  pod4.h  pod5.c  pod5.h  pod6.c  pod6.h  pod_common.c  pod_common.h  pod_crc.c  pod_crc.h  pod_zip.c  pod_zip.h  termpod.c  termpod.h
